--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title> Image to HTML (1) </title>
 </head>
 <body>
@@ -10,7 +10,7 @@
 	<header>
 		<div class="wrapper">
 			<div class="logo">
-				<img src="image/My Dream Home.jpg" alt="My Dream Home">
+				<img src="My Dream Home.jpg" alt="My Dream Home">
 			</div>
 			<nav class="menu">
 				<ul>
